--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 	},
 	"dependencies": {
 		"@astrojs/check": "^0.9.3",
+		"@astrojs/mdx": "^3.1.9",
 		"@astrojs/partytown": "^2.1.2",
 		"typescript": "^5.6.2"
 	}
