--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"@astrojs/check": "^0.9.3",
 		"@astrojs/mdx": "^3.1.9",
 		"@astrojs/partytown": "^2.1.2",
+		"@astrojs/sitemap": "^3.2.1",
 		"typescript": "^5.6.2"
 	}
 }
