ajout ltg + supp analytics

--- a/src/collections/projects.json
+++ b/src/collections/projects.json
@@ -6,15 +6,21 @@
 		"url": "../post/brawlstarangular"
 	},
 	{
-		"name": "Jeu de stratégie en C",
-		"description": "Jeu de stratégie en Joueur contre Ordinateur.",
-		"image": "https://i.ibb.co/3FcFrCx/regle-c.jpg",
-		"url": "../post/strategyc"
-	},
-	{
 		"name": "Application GentiVoisin",
 		"description": "Site type Leboncoin pour faire des échanges entre voisins",
 		"image": "https://i.ibb.co/PtGHCMq/gentivoisin2.png",
 		"url": "../post/gentivoisin"
+	},
+  {
+		"name": "Site LTG Andréani",
+		"description": "Site de l'entreprise de transport LTG Andréani",
+		"image": "https://i.ibb.co/tpH38nT/accueil.jpg",
+		"url": "../post/ltgandreani"
+	},
+  {
+		"name": "Jeu de stratégie en C",
+		"description": "Jeu de stratégie en Joueur contre Ordinateur.",
+		"image": "https://i.ibb.co/3FcFrCx/regle-c.jpg",
+		"url": "../post/strategyc"
 	}
 ]
